--- a/Main_Spine/c3.tex
+++ b/Main_Spine/c3.tex
@@ -1,4 +1,6 @@
 % !TeX root = ../main.tex
-% \xiaosi%
-\xchapter{基于联邦学习的无源域适应方法}{Algorithm and Code}
+\xiaosi
+\xchapter{基于目标特征搜寻的无源域适应方法}{Algorithm and Code}
 
+\xsection{引言}{Backgrounds}
+对于人体动作感知的任务，无线信号由于其可以在昏暗甚至无光场景下正常工作，
