--- a/Main_Spine/c4.tex
+++ b/Main_Spine/c4.tex
@@ -1,4 +1,5 @@
 % !TeX root = ../main.tex
-% \xiaosi%
-\xchapter{参考文献与交叉引用}{Crossreferences}
+\xiaosi
+\xchapter{基于联邦学习的无源域适应方法}{Crossreferences}
 
+\xsection{引言}{Backgrounds}
